Added our entities to misc forge tags